--- a/kingWeb/kingWeb/templates/adm/module/edit.html
+++ b/kingWeb/kingWeb/templates/adm/module/edit.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 <form class="form-horizontal" action="/adm/module/post_edit/" method="post" id="lkForm">
-    <input type="hidden" name="Id" value="{{id}}"/>
+    <input type="hidden" name="id" value="{{id}}"/>
      {%csrf_token%}
     <div class="form-group">
         <label class="col-md-3 control-label">模块名称</label>
