--- a/kingWeb/kingWeb/templates/adm/user/modifyinfo.html
+++ b/kingWeb/kingWeb/templates/adm/user/modifyinfo.html
@@ -5,9 +5,9 @@
 
     <script type="text/javascript">
         $(function () {
-              $("[data-toggle='tooltip']").tooltip();
+          $("[data-toggle='tooltip']").tooltip();
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.RefreshAndClose()
+
             }, "操作成功")
         })
     </script>
@@ -47,7 +47,7 @@
     <div class="form-group">
         <label class="col-md-3 control-label">旧密码</label>
         <div class="col-md-7">
-            <input type="password" class="form-control" id="txtNewPwd" name="OldPassword"
+            <input type="password" class="form-control" name="OldPassword"
                    data-val="true" data-val-maxlength="密码长度不能超过20个字符" data-val-maxlength-max="20" />
             <span class="field-validation-valid" data-valmsg-for="OldPassword" data-valmsg-replace="true"></span>
         </div>
